--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+     "composite": true,
+     "skipLibCheck": true,
+     "module": "ESNext",
+     "moduleResolution": "Node",
+     "allowSyntheticDefaultImports": true,
+     "forceConsistentCasingInFileNames": true,
+     "strict": true // Add this line
   },
   "include": ["vite.config.ts"]
-}
+ }
